--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/02.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/02.md
@@ -43,7 +43,7 @@ that truth alone endureth and untruth betrayeth itself in time.
 富翁 
 the main doctrine of which is :Enjoy whilst thou livest, for it is but blank after death." 
 "Eat and live to-day, let to-morrow take care of 
-itself." &c. See Paramata-bhanga by Deșika. 
+itself." &c. See Paramata-bhanga by Deṣika. 
 91 
 Therefore the attempt of Mahāmōha in collecting a host of Perverts to conquer Vivēka is no better than that 
 of a stone-raft sought out for crossing the high seas. 
@@ -66,7 +66,7 @@ To remove this pain, I shall resort to the Lord Almighty.
 93 
 (Gesturing recollection.) 
 1. I adore the causeless and stainless splendour of Hayagriva, present as a pure mount crystal-made, depriving the agonies. of the worlds three by His dazzle, nectarlike,-Hayagriva whose neighing voice resembleth the Upanishads Eternal. 
-2. Further, may the neigh of Hayagrîvathe sum and sense and seat of Vedas, Sāma, Rig and Yajur,-of all obstacles the Remover, the surging swell of the sea of selfknowledge-efface my inner ignorance, caused by the clamour of heretics, conceited, combative and carrying a roaring trade (of theirs.) 
+2. Further, may the neigh of Hayagrīvathe sum and sense and seat of Vedas, Sāma, Rig and Yajur,-of all obstacles the Remover, the surging swell of the sea of selfknowledge-efface my inner ignorance, caused by the clamour of heretics, conceited, combative and carrying a roaring trade (of theirs.) 
 Senapati.-Ah. Great King! By valour over 
 Mahamoha, thy success is as 
 sure 
@@ -211,7 +211,7 @@ Vedanta-Dipa.
 1. Gadya-Traya. 
 2. Sri-Bhashya. 
 3. Vedanta-sara. 
-4. Védārtha-sangraha. 6. Gîtā-Bhashya. 
+4. Védārtha-sangraha. 6. Gītā-Bhashya. 
 All by Rāmānuja. 
 106 
 Grace, to drive darkness and enhance the joy' of God-knowledge, to redeem from evil ways and to implant in The Way. 
@@ -370,7 +370,7 @@ Vedantins.
 Guru.-Live thou long! listen attentively. 
 Pupil. Great is thy grace! 
 King.-Pious youth! 
-1.  By knocking down the misconstructions, strayed from authoritative paths, adversaries shall be expelled on the principle called Sthālîpulāka'. Surely all the gold ingot is not rubbed on the touchstone to test its quality. 
+1.  By knocking down the misconstructions, strayed from authoritative paths, adversaries shall be expelled on the principle called Sthālīpulāka'. Surely all the gold ingot is not rubbed on the touchstone to test its quality. 
 verbal 
 Pupil.-Aye! As willeth thy Majesty, will I 
 summon these quidnunes for gymnastics. 
@@ -382,7 +382,7 @@ Here haileth Yatindra-the hill-fount of the rivers of all knowledge,Yatindra, th
 perverts, and the full-orbed Moon to the tides of the Vedic sea. 
 1 
 (Inside the curtain.) 
-1.  Schooled well in the systems of Tarka, Vyakarana2 and Mîmāmsā3, and our manliness paraded in systems counter also, we declare boldly in this assembly that we care not our contesting foes-from Sētu up to Himalaya-a yarn, straw or chaff. 
+1.  Schooled well in the systems of Tarka, Vyakarana2 and Mīmāmsā3, and our manliness paraded in systems counter also, we declare boldly in this assembly that we care not our contesting foes-from Sētu up to Himalaya-a yarn, straw or chaff. 
 Senapati Arya! Hearest thou the 
 the proud challenge of the opponents? 
 Pupil. ~(With anger) Enough of insolence! 
@@ -421,7 +421,7 @@ It is a belief among the pious that the mention of the Acharya's name alone will
 1. 
 120 
 the pride of rivals quelled by the vibrating waves of Hayagriva's' neigh, revelling in (our) heart-thrones,-lineage revealing the right way by the yarn-pile of other creeds being swept away by winds,2 borne of the fluttering pennons hoisted on the mansions of the quarters ten. 
-1.  Had Sri Rāmānuja not promulgated the ancient system of Philosophy, which saveth Dame Sruti from widowhood," by still vouchsafing for her the embrace of her Lord,-ridiculous would be Vyasa, oblivious would be Vālmîkî', a toy would be Sri Suka", and vain indeed 
+1.  Had Sri Rāmānuja not promulgated the ancient system of Philosophy, which saveth Dame Sruti from widowhood," by still vouchsafing for her the embrace of her Lord,-ridiculous would be Vyasa, oblivious would be Vālmīkī', a toy would be Sri Suka", and vain indeed 
 The horse-faced Avatara of Vishnu. 
 * 
 1. The allusion is to Nyaya Tatva, (of Nathamuni) ---Siddhi-traya (of Yamuna), Sri-Bhashya (of Ramanuja.) 
@@ -488,7 +488,7 @@ Listen intently.
 1. Founders of the Sri Vaishyava-Siddhanta. 
 2.  
 124 
-Kānāda's story, I have only too well studied, and those of Akshapāda have taught. With Purva Mîmāmsa I am puffed. As to Sankhya and Yoga, I have oft discoursed upon them. Ha! Ha! Is there thus (yet) an iota for me to reflect about those, wandering in the wilderness of several false systems shattered indeed by Yatîndra,—those blinded by the night of inner illusion ? 
+Kānāda's story, I have only too well studied, and those of Akshapāda have taught. With Purva Mīmāmsa I am puffed. As to Sankhya and Yoga, I have oft discoursed upon them. Ha! Ha! Is there thus (yet) an iota for me to reflect about those, wandering in the wilderness of several false systems shattered indeed by Yatīndra,—those blinded by the night of inner illusion ? 
 Besides :- 
 1.  Whoso, in this last age (Kali), learneth this Yati-king's dialectic dissertations, disclosing the peculiar Visishtadvaita doctrine',-the day-break to the darkness of nescience before him, anon declineth the wrangling waves of Casuists, 
 2. शरीरशरीरिभाव: = That the souls constitute the 
@@ -528,7 +528,7 @@ of food r fruit.128
 Listen Oh non-Vedins and Vedamisinterpreters ! 
 1.  Stop now with your false jargon, dear only to the mean,-puffed up with mutual admiration but repugnant to the galaxy of savants. In troth see your methods lame before these truth-speaking lions of good men! 
 Pupil.-Blessed sire! Cast thy looks this way. 
-1.  These men embrace corrupt dialects such as the Mahārāshtrā, Māgadhi, Saurasēnî, Lātî, Gāudi, etc., which Buddha, Jina, and others, have passed off as Scriptures,—— dialects that are the laughing-stock (of the Samskritists.) 
+1.  These men embrace corrupt dialects such as the Mahārāshtrā, Māgadhi, Saurasēnī, Lātī, Gāudi, etc., which Buddha, Jina, and others, have passed off as Scriptures,—— dialects that are the laughing-stock (of the Samskritists.) 
 I also, nevertheless, versed in all these dialects, shall win these disputants by their own weapons; so goeth the saying, that 'devils must be met by devils' patois.' 
 Guru-Help thyself to language divine (i.e., Samskrita) or non-divine i.e., Prākritic but 
 129 
@@ -742,7 +742,7 @@ demon Madhu is compared to a gust of wind driving away dust.
 referred to here.) 
 1. Demon Kalanemi is compared to a tree and Vishnu's destroying him is referred to as felling. 3. Pāncharātra Tantra, containing the direct oracles 
 149 
-one with the followers of Vēdānta-siddhānta; they have turned their minds away from the study of diverse trifling Vidyās and pure both within and without, like Svētadvîpa'-residents, are blest, walking the way of the Upanishad-wise. 
+one with the followers of Vēdānta-siddhānta; they have turned their minds away from the study of diverse trifling Vidyās and pure both within and without, like Svētadvīpa'-residents, are blest, walking the way of the Upanishad-wise. 
 Further:- 
 1.  Deeply devoted to the Lord Supreme, these (versed in the Satvata-Tantra) have severed (their connection) from others, with hearts content with worship of the Lord, (of the description) Abhigamana*, Upādānā, etc. Though the Deva-hosts prostrate to them, they, esteeming each other, owing to their clear perception of the 
 of God. (Vide Pāñcharātras by Gōvindāchārya in J. R. A. S. 1911.) 
@@ -764,7 +764,7 @@ in some respects, with God-revealed Pāncharātras, as with other Tantras. Liste
 1.  May the Pāncharātra-word, incorporated with the Krita" (age)-famed Vedas,- 
 2. Shutting ears is a Hindu habit, meaning something 
 untoward heard, or to be heard, or thing inauspicious to ward off. 
-1. Such as that of the Pāșupata. 
+1. Such as that of the Pāṣupata. 
 2. 
 some- 
 This age is noted for the Supreme authority of the Vedas. Witness the verse quoted by 
@@ -798,14 +798,14 @@ Prabhakara and Kumārila also to be defeated by thine disciple?
 1. Churning of the sea in the Fish-Avatara, when the Moon was born, is here the allusion from which the metaphor is taken. 
 2. The son of Parāsara - Vyāsa. 
 3. Refering to इदं श्रेयं इदं पुण्यमिदं हितमनुत्तमम् । and 
-other verses in the Nārāyanîya of the MōkshaDharma in Santi Parva of the Mahabhārata. 
+other verses in the Nārāyanīya of the MōkshaDharma in Santi Parva of the Mahabhārata. 
 153 
 Guru. Great king! As defenders of the Vedas but deserters of the Vedānta, they deserve to be extolled as well as condemned. 
 Pupil. (Jeeringly). 
 1. 
 2.  
 Devoid of all defects as the Vedantas are, how in this assembly, can these follow the headless trunk, the Pūrvamimāmsa' ? 
-This indeed is the decision of the spiritual scientists, the vanguard of all the Vaidika-societies; viz., that Vishnuvotaries abstain, as from sin, from Kamya Dharmas, and deeply engage in Nitya" and Naimittikas.' Hence, savants (like. Bōdāyana) postulate that Karma and Brahma (or Jnāna) Mîmāmsas constitute together but one Science. 
+This indeed is the decision of the spiritual scientists, the vanguard of all the Vaidika-societies; viz., that Vishnuvotaries abstain, as from sin, from Kamya Dharmas, and deeply engage in Nitya" and Naimittikas.' Hence, savants (like. Bōdāyana) postulate that Karma and Brahma (or Jnāna) Mīmāmsas constitute together but one Science. 
 Púrva and Uttara Mimāmsas, or the Karma and 
 Jñana Kāndas, constitute one Science. Hence 
 the former without the latter is a headless trunk 
@@ -848,7 +848,7 @@ Prabhakara.
 1. Yadava and Bbāskara are also implied here. 
 2. Dogmas postulating nescience to Jiva 
 वादिकल्पना 
-endareî- 
+endareī- 
 156 
 vādin's') assert this cosmos to be categorised under what is not I (i. e., subjective), and what is not this" (i.e., objective) This attempt seemeth a fairy castle built in the void. By such plausible but conflicting and out-Vindhyaic sort of hard gibberish, these deserve to be counted amongst the toadies fawning on a king, begot of a barren dame. 
 Moreover:- 
@@ -890,7 +890,7 @@ with
 Brahman, there is no liberation at all, for it is ever-existent. 
 An Asura named Paundraka, pretending identification with Krishna, imitated him. The pretender was eventually killed by Krishna. 4. सुभगाभिक्षुकन्याय - The maxim referred to here is the attitude of that mother-in-law, who, not approving of her daughter-in-law's refusal of 
 159 
-method of these Rāhu-mîmāmsakas', kin to Rakshasas. For, having themselves discarded Vedanta, they traduce others (aliens), while vilifying themselves (so-called) 
+method of these Rāhu-mīmāmsakas', kin to Rakshasas. For, having themselves discarded Vedanta, they traduce others (aliens), while vilifying themselves (so-called) 
 Vedantins. 
 } 
 Verily do we blush to try conclusions with these. silly-talking folk, and feel as the person, who, when advising a dolt to have no "Stage-fright" (Sabhākampa), would (be silly enough to) himself blubber have no "frage-stright "" (Bhasa-panka). 
@@ -900,7 +900,7 @@ beggar,
 would call him back, only to 
 tell him herself that she cannot on any account give him alms; i.e., the right of refusal was an usurpation by the daughter-in-law. Hence the application of this maxim here is thus:-The Bauddhas reject the Vedanta but the Advaiting call in the Vedānta to their doors again only to say: We have the right to reject you and not the Bauddhas." 
 1. Trunkless-head (as Rāhn is)-as opposed to two 
-trunk or Kōtu or the Kabandha-mîmāmsakas). 
+trunk or Kōtu or the Kabandha-mīmāmsakas). 
 Mayøvadins:मायिनः पूर्वोत्तरमीमांसयोरेकावयवित्वेsपि वेदशिरोभागविचाररूपोत्तरमीमांसामावाङ्गीकारात् 
 160 
 selves refute them best. The fourfold means of Moksha, these fourth-yuga Sanyāsins-pirates of the triune Truism, Vedic Chid-Achid-Isvara'-assert, the wise mockingly understand antinomically thus :- 
@@ -991,7 +991,7 @@ forward thou shalt do:-
 1. 
 A species of kettle-drum. 
 166 
-1.   Coveting no honor, fame or wealth, gracious unto (thy) disciples, eager to learn, be engaged, as long as thy body lasteth, in the promulgation of the SārîrakaScience1, supported by sound logic. 
+1.   Coveting no honor, fame or wealth, gracious unto (thy) disciples, eager to learn, be engaged, as long as thy body lasteth, in the promulgation of the SārīrakaScience1, supported by sound logic. 
 Pupil.-Aye, as the holy sire directeth. 
 ( Behind the curtain.) 
 Avaunt! A vaunt! 'Sdeath! 
