--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/03.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/03.md
@@ -15,7 +15,7 @@ Lust-Attachment to wordliness.
 169 
 1. Now that the heretics have been overthrown through the manœuvre of Viveka, the way to Trivarga" is the only outlet for Mahāmōha's energies. Beggarly Virakti', I shall just decoy to a distance, and thou shalt entice Vishnu-bhakti all 
 at once. 
-Their disjunction with Jiva can be, by all means, effected, by casting the nets of making Svarga appear worthy and Mōksha unworthy, in all places. Expert as I am in a thousand and one deceits, I shall just beguile the beggarly Virakti, as Mārîcha 
+Their disjunction with Jiva can be, by all means, effected, by casting the nets of making Svarga appear worthy and Mōksha unworthy, in all places. Expert as I am in a thousand and one deceits, I shall just beguile the beggarly Virakti, as Mārīcha 
 Buddhists and others. 
 1. 
 See n. 1, p. 115. 
@@ -29,9 +29,9 @@ did Mithili' and thou shalt entice VishnuBhakti as Pōulastya2 did.
 Dvesha. Then what? 
 Raga. -True, the Teacher of Vēdānta Siddhānta hath routed the head-less Pūrvamimāmsakās, the foremost of the wishers, of Mahāmōha's success-the very Purōbits of demon Hiranya as it were re-incarnate on earth, yet I shall propound their very creed ingeniously and thus accomplish my 
 master's mission. 
-Dvesha. Rightly opportune is thy resolve to stand by the victorious banner of the arch-chiefs of Mahamoha promoting Atheism, viz., the creed of Nirisvara Mîmāmsa. 
+Dvesha. Rightly opportune is thy resolve to stand by the victorious banner of the arch-chiefs of Mahamoha promoting Atheism, viz., the creed of Nirisvara Mīmāmsa. 
 Raga.2. If it becometh a passion to long 
-1. Another name of Sîtā. 
+1. Another name of Sītā. 
 2. 
 3. 
 4. 
@@ -44,7 +44,7 @@ man.
 171 
 after the paltry and ephemeral pleasures' how can dispassion possess one who longeth for endless and eternal joy ?2 
 1. It is mistaken to aver that beatitude 
-is Self-realisation; but if beatitude be one intercoursing with another, then what else but Kāma can best constitute what is called beatitude (Moksha), coveted by one and all? Beatitude therefore can be no other than Svarga, the seat of all (carnal) enjoyments at will, and this view is supported by the authority of our betters, the NirisvaraMîmāmsakas (Godless philosophers). 
+is Self-realisation; but if beatitude be one intercoursing with another, then what else but Kāma can best constitute what is called beatitude (Moksha), coveted by one and all? Beatitude therefore can be no other than Svarga, the seat of all (carnal) enjoyments at will, and this view is supported by the authority of our betters, the NirisvaraMīmāmsakas (Godless philosophers). 
 Dvesha. Indeed! It is this that is accepted to be the final decision, arrived at after a careful study of the traditions of Mahāmōha, by savants well-versed in Mahāmōha's lore*. 
 1. Enjoyment of Svarga, etc, 
 2. 
@@ -134,7 +134,7 @@ Transformeth he to tears of joy.
 Pure Interlude ends. 
 THEN ENTER VIVEKA AND SUMATT. 
 Viveka.Queen mine! Take heart, take heart. Virakti and Vishnu Bhakti have just been made to join thee, their fears caused by the thieves', incited by Mabūmōha, 
-1. Räge and Dyēsha are sarcastically called thieves 
+1. Rāge and Dyēsha are sarcastically called thieves 
 here. 
 179 
 having now been dispelled. 
@@ -153,7 +153,7 @@ Sumati.—(With sorrow, using Samskrit).
 180 
 Svarga and Naraka, waking, dreaming, sleeping, swooning and agony of death. 
 Besides: 
-1.  Jiva doth wander in this Samsara, made horrid by dotage, death, and fleeting sweet youth and by the manifold inter-related sins, flowing. like the Blood of the wild torrent, wherein the miraculously quick cosmic Creator seemeth to have distinguished the different Karmas by the force of his hurricane-Lîlā3. 
+1.  Jiva doth wander in this Samsara, made horrid by dotage, death, and fleeting sweet youth and by the manifold inter-related sins, flowing. like the Blood of the wild torrent, wherein the miraculously quick cosmic Creator seemeth to have distinguished the different Karmas by the force of his hurricane-Līlā3. 
 Viveka.-{ With remorse.) Queen ! 
 What thou hast till now said is true. 'But listen to me now describing the long-accumulated Punya of the Jiva which maketh him long to trod in the Never-to-return Path.5 
 1. Abode of the Devas. 
@@ -189,7 +189,7 @@ Restored am I now, by thy language, disclosing a leaning for sound authorities. 
 For :- 
 1.  Now the Naga' damsels, residing in mountain-caves on ocean-shore, sing aloud thy fame, which shineth like the moon, washed of her stain by the billows of the Ganga, on the crest of Siva, when he is disturbed by his dreadful Delugedance, and they get delighted at the perennial flow of nectar, exuding from each letter of the alphabet, making up thy praise ! 
 (Pondering on the glory of Vedūntasastra, with joy and thrilling sensation.) 
-1.  These (God) sciences, through the knowledge of a part of which, Jîva, 
+1.  These (God) sciences, through the knowledge of a part of which, Jīva, 
 2. Serpent. 
 185 
 tormented by samsāra-fire, doth feel that Moksha already percheth on his palm', even when this carnal body-the seat of all illusions-doth exist, thrive through the ever-expanding Madhusudana's grace that is so cool and clear, pure and pleasing, like the celestial waves of Gangā. 
@@ -301,7 +301,7 @@ unique heinousness of the sin of insulting the true realiser of Brahman, so ably
 Is there then no remedy for this sin? 
 Viveka,-There is but one remedy and that is seeking the pardon of the one that was insulted. 
 1. ef. ब्रह्ममेव सुरापेच चोरे भभवते तदा । 
-famfafäftar aft: sadeıfta fasfa: 11 
+famfafāftar aft: sadeıfta fasfa: 11 
 195 
 For :- 
 1.  An aquatic animal1 falleth into great anguish by being out of water, but the same doth revive by water gradually gained. Similarly, the Jiva, cast away by the insult offered to the great, falleth into Samsāra and getteth true knowledge back by resorting to the very person. 
@@ -469,7 +469,7 @@ Further:-
 lustre, 
 double, 
 Happy-lit lamp's luminosity doth 
-To perform usual nightly Nîrājana,' Do they walk in groups unbroken, 
+To perform usual nightly Nīrājana,' Do they walk in groups unbroken, 
 to adorn seraglio. 
 Therefore I shall now perform the evening ablutions and guard Jiva whose mind is now intently fixed on the supreme Brahman. Attended by thy chamber-maids Kshānti, Santi, etc, thou shalt enter the 
 2 
