--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/04.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/04.md
@@ -127,7 +127,7 @@ Kama. --(Pondering and with a sardonic smile).
 Should, disregarding me, Vivēkaproud in the company of Vyavasaya' and others, would yet fight with me, he himself should bring about the fate of Saubhag captivated by a hundred damsels. 
 Vasanta. --No wonder! For, renowned indeed 
 are thy valorous deeds! 
-1.  The merry she cuckoos, (as if they were)-the musical instruments of Panava,3 Vēnu Vînù3, etc.-ever sing the valor of thee, blossom-bowed Cupid, that hath the bow-string made up of the swarm of bees, delirious with the drink of honey, flowing from the blossoming Kalpaka blooms 'that make thy bow! 
+1.  The merry she cuckoos, (as if they were)-the musical instruments of Panava,3 Vēnu Vīnù3, etc.-ever sing the valor of thee, blossom-bowed Cupid, that hath the bow-string made up of the swarm of bees, delirious with the drink of honey, flowing from the blossoming Kalpaka blooms 'that make thy bow! 
 2. Application. 
 3. 
 A sage named Saubhari, while penancing in the midst of water, beheld a fish, surrounded by its offspring. Enamoured of this, he gave up the ponance, bimself longing to enjoy a similar happiness and married the hundred daughters of Māndhāta for the purpose. (See Vishau Purāns). 
