--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/05.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/05.md
@@ -49,7 +49,7 @@ Queen Durmati hath, just now, requested me to practise some witchcraft on Vivēk
 Well, boy Dambha! Thou 
 Thou who spoilest all the Dharmas of the universe shalt exterminate Viveka". 
 Averse as I am ever to desires, out of extreme civility, believing in the sages' dictum-"There is no sin in exorcising 
-1. Ravana carried away Sîtā in the guise of an 
+1. Ravana carried away Sītā in the guise of an 
 ascetic from the Panchavati forest. 
 1. 
 Arjuna carried away Subhadra (sister of Lord 
@@ -359,7 +359,7 @@ in cases where faults exist ?
 sword-like tongue driveth discrimination away, speaketh ill in the presence of the virtuous, for his slaughter of Tātakā', for his unfairness towards Vālin2 and for his slight step-back” in battle. Shall it then neglect ordinary 
 The killing of a woman is not sanctioned by the Hindu Sastras. Tataka being a giantess, her slaughter was instigated by Visvamitra as she caused great havoc to the sacrifices of great sages. 
 1. Unfairuess is attributed as Rama laid himself in 
-ambush to kill Välin instead of striking him direct face to face. The controversy between Sri Rama and Vālin hereon is dwelt at length in the Kishkindhā Kānda of Sri Ramayana. 
+ambush to kill Vālin instead of striking him direct face to face. The controversy between Sri Rama and Vālin hereon is dwelt at length in the Kishkindhā Kānda of Sri Ramayana. 
 1. 
 Sri Rama had to face the tremendous odds of Khara's hosts of 14,000 men in Janasthāna and in the heat of the raging battle, he, over known not to flinch even a step in all his valiant fights, had to retrace by a single step, overwhelmed by the might of the opposed forces(vide Aranyakānda of Sri Rāmāyana). 
 1. 
@@ -440,7 +440,7 @@ Dambha.-(On seeing both, feigns to be under a vow of silence, and orders his wif
 gestures.) 
 Kuhana.--(Advancing in haste). 
 1. 
-Ah, divine Sanyasinî !' 
+Ah, divine Sanyasinī !' 
 Stand ye 
 must, at a distance from the presence of the master of my house. For, it is not proper for my master to remain near ye, who have not taken your bath and who are polluted by long travel. Let not your shadow which would vitiate the efficacy of Mantras, defile the holy person of this great Yogi. Him, even the high-souled sages, prostrate at a distance. The water of the Bhagirathi, 
 Ascetic woman. 
@@ -664,7 +664,7 @@ Further :-
 1.  Breatheth there the man who faileth 
 2.   
 not in courage, even at the sight of dam÷ sels, who are shaped together with the collected materials of darkness, the moon," flower-bunch, the sky', the eddy," the plantain-tree, the mirror, the quiver," and the lotus'.-damsels who resemble the waving pennons, implanted in the front of Cupid's hosts ? 
-Ha! Ha!! Quoth not the Vedas that many are the wives of Garuda, brooking not a moment's separation from him, as also of the other eternal lovers of Vaikuntha who are ever free from family-ties? Quoth not again the Srutis that the Supreme Lord who liberateth men from all samsāra is the spouse of no less than three wives, Srî, Bhu and Nila? Therefore the monkeylike revilers of Kāma-the true aim of life, 
+Ha! Ha!! Quoth not the Vedas that many are the wives of Garuda, brooking not a moment's separation from him, as also of the other eternal lovers of Vaikuntha who are ever free from family-ties? Quoth not again the Srutis that the Supreme Lord who liberateth men from all samsāra is the spouse of no less than three wives, Srī, Bhu and Nila? Therefore the monkeylike revilers of Kāma-the true aim of life, 
 1. Hair. 
 2. Face. 
 3. Thighs. 
@@ -714,7 +714,7 @@ Mahamoha. My dear! Want of proper investigation is the cause of this, blind obst
 1. 
 2.  People, eager to indulge in vain quibbling arguments, thus abandoning the faultless faith propounded by Brihaspati, set their hearts on diverse other creeds established by Kapila, Hiranyagarbha, Kānāda, Buddha, Jina and others. 
 3.  Both movable and immovable objects are wondrous by nature, like the variegated imes of the peacock's plumage. Need poets assign any reason for the thorn being sharp ? 
-Such is the indomitable force of the theory of nature, The law of cause and effect also followeth the Kāka-tālîya-nyāya.' 
+Such is the indomitable force of the theory of nature, The law of cause and effect also followeth the Kāka-tālīya-nyāya.' 
 The maxim of the crow and the palm fruit. It takes its origin from the unexpected and sudden 
 306 
 Even thus:- 
