--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/01.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/01.md
@@ -13,7 +13,7 @@ ever typified by His Truth'-(indicating) Weapons2 and Adornments."
 .whose 
 fixed thoughts are. by sruth-proved 
 1. The Tatvas, viz, the Twenty-six categories. According to the Sankhya-Vedantins, the 26 categories are:- 
-Fire, Air, Ether, Earth, Water (the elements) 5 Their respective rudiments or Tanmåtrās 
+Fire, Air, Ether, Earth, Water (the elements) 5 Their respective rudiments or Tanmātrās 
 2 Eyes, 2 Ears, 2 Noses, Tongue, Skin, 
 Brain and Rectum 
 Nature (Prakriti), Mahat, Ahamkara. Mind 
@@ -24,7 +24,7 @@ Soul and God
 26- 
 2. The Holy Discus etc. 
 3. 
-See Astra-biûshayadhyaya in the Vishnu- 
+See Astra-biūshayadhyaya in the Vishnu- 
 The Holy Kaustubha etc. Purana 
 4. Sri or Lakshmi-the wife of Vishuu. 
 5. cf. प्रणवो धनुः शरोह्यात्मा ब्रह्मतलक्ष्यमुच्यते । 
@@ -123,7 +123,7 @@ guises, suited to the rôle to be played in obedience to the behests of this ser
 Nati.-My Lord! Surely the troupe of actors hasten, who are as much subject to thy control, as thy limbs, hands, legs, eyes, etc. are, the moment thou thinkest of them. By the way, I have one thing to ask of thee :What is the name and nature of the play about to be staged? 
 Sutradhara.-My Love! Knowest thou not the new Drama, named Sankalpa-suryodaya, the hero of which is Vivēka ? 
 1. It is only the wise, who know the 
-2. Chief actress-generally the wife of the Sûtra- 
+2. Chief actress-generally the wife of the Sūtra- 
 dhara.11 
 true nature of Paramātman1 and of Jivatman that will appreciate the singular plot of this Drama, where, the good and bad aspects of Jiva personate their respective presiding deities, and constitute the diverse characters (consequent). 
 1. This striking performance will appeal even to men worldly disposed, for as much as it aboundeth in, (the demonstration of) the emotion of Heroism, evidenced in the conquest of Māhāmôha by Vivēka,--in the emotion of Mercy by the attitude of the Lord,-in the emotion of Peace by the attitude of the Jiva seeking for salvation. 
@@ -150,14 +150,14 @@ Nati.-My Lord! Whose opus is this Drama?
 This audience doth evince sympathy for us, begot by its sense of high veneration held for this self-same dramaturgist! 
 Sutradhara.-My Love! Didst thou not hear 
 this :- 
-That there is a Poet named Sri Venkatanātha, the son of Anantasûri,-respected all over the world,-the wonder of the universe, the ornament of the Visvamitra'Gotra, the Lotus to the sports of stainless 
+That there is a Poet named Sri Venkatanātha, the son of Anantasūri,-respected all over the world,-the wonder of the universe, the ornament of the Visvamitra'Gotra, the Lotus to the sports of stainless 
 1. Kausika-Gôtra or descent, one of the important 
 Gotras by which the twiee-born are recognised. 
 The Goddess of learning, Sarasvati, is supposed to live in the lotus flower. Stripped of the figure. the meaning is the seat of all learning. 
 I. 
 14 
 Sarasvati,-the Treasure-house of infinite virtues, and himself the son of PundarikākshaSomayaji,-Venkatanatha, the acquirer of the additional name of Vedantacharya through the divine commands of Lord Ranganatha,-the wearer of the renourned 
-A large number of Advaiti Pandits from the North of India hailed once to Srirangam and challenged the Vaishnava savants there that they must either conquer them in controversy or embrace their creed. In fear and anxiety the Vaishnavas of Srirangam sent word to Venkatanatha at Kanchi (Conjeevaram), who, responding, came all the way to Srirangam and in Lord Ranganatha's temple defeated the Advaitins, after seven days' disputation. A full report of this disputation is collected and shaped into a book called Şatadushani. Lord Ranganatba, immensely pleased at the great abilities of our Venkatanātha addressed him thus:- 
+A large number of Advaiti Pandits from the North of India hailed once to Srirangam and challenged the Vaishnava savants there that they must either conquer them in controversy or embrace their creed. In fear and anxiety the Vaishnavas of Srirangam sent word to Venkatanatha at Kanchi (Conjeevaram), who, responding, came all the way to Srirangam and in Lord Ranganatha's temple defeated the Advaitins, after seven days' disputation. A full report of this disputation is collected and shaped into a book called Ṣatadushani. Lord Ranganatba, immensely pleased at the great abilities of our Venkatanātha addressed him thus:- 
 "Well are we pleased that thou hast put down thy opponents and established the Ramanuja-Siddhants which alone describes our nature truly. From now thou shalt be known in the world by our own title "Sri Vedantacharya." (See Biographical sketch.) 
 15 
 title of Karitarkika-simha,'-by virtue of his abilities, the dispeller of all doubts likely to arise in all sciences and arts2,-the Acharya whose disciples hoist his triumphant banners in all the quarters ten. 
@@ -189,7 +189,7 @@ Bell at Tirupati, vide his life sketch.
 17 
 pati'), the Bell that frighteneth the armies of the Asuras2. 
 and 
-1.  To gratify the Lord Supreme, the Blessed Venkatanātha, the master of all knowledge at his twentieth year, the expounder of Brahmasûtra-Bhāshya to his disciples a score and ten times, composed this superb and melodious* drama, surcharged with superior sense. 
+1.  To gratify the Lord Supreme, the Blessed Venkatanātha, the master of all knowledge at his twentieth year, the expounder of Brahmasūtra-Bhāshya to his disciples a score and ten times, composed this superb and melodious* drama, surcharged with superior sense. 
 3 
 Nati.-My Lord! How shall the tough composition of this Poet, always bent on Vēdāntic researches, and whose adamantine logic uprooteth the trees of Pāshandas,5 be fit to be put on boards by persona like us? 
 Sutradhara. (Smiling) Lady! I shall just 
@@ -470,7 +470,7 @@ as well. Even the best of yogis shall be made by me to prostrate at the feet of 
 Rati. My Lord! Thy greatness is well known to me, but I am distressed, like the plantain (tree) shaken in a heavy gale, to think when and what may befall us, through the force of our ever-persevering, farsightel foe, strong to command and counsel alike, favored by God, and aided by several co-operators, such as Yama," Niyama, etc. Well known it is that the 
 3 
 2 
-1. The form referred to is Ardhanarişvara, See, 
+1. The form referred to is Ardhanariṣvara, See, 
 n. 1, p. 31. 
 2 
 शरीरमाधनापेक्षं नित्यं यत्कर्म तद्यमः । 
@@ -584,7 +584,7 @@ For:-
 1. Satva, Rajas, Tamas. 
 2. जायमानकटाक्षादि सन्धुक्षिताचार्यप्रसादानन्तरकाले 
 3. 
-Ashtaksharî-Mantra, etc.51 
+Ashtaksharī-Mantra, etc.51 
 and faithful devotion to the Supreme Lord (on the other hand) is to practise severe penance, involving the inhibiting of all the senses. Pleased by this penance, Sri Janārdana's Mercy is to fashion a demon, surpassing the strength of myriads of Kaitabhāsuras2, to be her (Bhakti's) servant -(stops suddenly half uttering this). Vasanta.-(Aside) "This (demon) can be no other than Sankalpa-Suryodayathe extinguisher of our race must be the close of the sentence. I shall however conclude it otherwise. 
 39 
 (Aloud). The rest must be difficult 
@@ -597,7 +597,7 @@ never-before-enjoyed pleasure).
 H 
 1. Lit-One full of mercy on all - Epithet of Sri 
 Narayana. 
-In Kama's eyes the name to be mentioned is an Asura, as he is going to destroy his clan. Kaîtabha is the demon who stole away the 
+In Kama's eyes the name to be mentioned is an Asura, as he is going to destroy his clan. Kaītabha is the demon who stole away the 
 Vedas from Brahmā. 
 52 
 1.  (Aside). With this timid and turbulent embrace of the tremulous-eyed Rati, which causeth her bangles to break, throweth her pearl-necklace out of place, brusheth away all afflictions, and produceth every pleasure though passing, the soul inward spurneth all notions of the duality of our dual frames ! 
@@ -657,7 +657,7 @@ in life-Sumati.
 Being the cause of the comos. 
 1. 
 57 
-Dama, and other virtues, monopolising the secrets1 of Mantras like the Ashtāksharî, and desirous of demolishing Môha, restraineth all desire for sense-lusts, maketh researches in Vedanta, consulteth the rules relating to Moksha, and studieth BhagavadGîtā with unswerving devotion. 
+Dama, and other virtues, monopolising the secrets1 of Mantras like the Ashtāksharī, and desirous of demolishing Môha, restraineth all desire for sense-lusts, maketh researches in Vedanta, consulteth the rules relating to Moksha, and studieth BhagavadGītā with unswerving devotion. 
 Further :- 
 1.  This Sun of Vivēka, augmenting the lustre of Sumati, to whose (Sumati's) heart the truth about God and soul is most near,Vivēka who again is full of the ardent love for Moksha, though in great prosperity, doth now attain the feet of Vishnu, on Whom he leaneth, after scattering the (twofold) mist of Ahamkāra viz. selfness in body and selfness in soul. 
 Also means-Keeping his councils secret". 
@@ -755,7 +755,7 @@ This here is to be investigated :-
 2. Except Charvaka - The materialist who holds that 
 body itself is the soul. 
 65 
-Teacher' caught-the enlightened2 Jîva thus (caught) reapeth in plenty all the riches stretching up to Moksha. 
+Teacher' caught-the enlightened2 Jīva thus (caught) reapeth in plenty all the riches stretching up to Moksha. 
 1.  In the manner of the Daughters of Vidēha, Jiva, confined in the body of Lanka, girt by the sea of Samsāra, ruled by the proud ten-headed demon of mind with the senses ten, (Jiva, like her, Vaidehi) pineth, thus humbled. Anon by a Hanuman-like Guru is (Jiva) instructed of the Truth (of God, etc.) 
 known as 
 1.  In this carnal body Brahmapura, having several portals of sins countless, Jiva, unrestrained of action, being incentived by a will free (-given) but kept in limits by 
@@ -778,7 +778,7 @@ objects:
 1. 
 God of the attributes Jñana, Sakti, etc. 4. Satva, Rajas, Tamas. 
 67 
-King-My quick-witted love! Buddhî also, self-luminons though she be, is for the nonce practically dormant. 
+King-My quick-witted love! Buddhī also, self-luminons though she be, is for the nonce practically dormant. 
 For- 
 1.  Like the lotus fading at the setting sun and like the charmless night by the Rāhu'-eclipsed snow-beamed Moon, our Mother Buddhi, lovely lady! fadeth for the time being, remaining inert, struck out of her luminosity, resembling soul itself-her Lord, bereft of attributes, by Māyic2 contact. 
 Sumati.-Aryaputra! Profoundly pitiable is this bonded state of Jiva along with Buddhi! Thou shalt now elucidate for me at length, the means by which Jiva,-ever so much misery-molested, shall attain Moksha. May I have peace of mind thus! 
@@ -860,7 +860,7 @@ Once the head of a herd of Elephants tormented
 caught as he was warring, by the crocodile Ahamkāra'. Why, to champion the oppressed is a matter of course. 
 For :- 
 1.  Be a refugee humble, or be he proud or be he culprit or non-default it matters not, for, he is eligible for protection, as far as possible. This is the great ethical canon, firmly established by the highly virtuous, such as Visvamitra', 
-by excessive thirst went to a pool of water to quench its thirst, when lo! an alligator caught hold of the foot of the elephant which, knowing of no other protector, appealed loudly to the Mercy of the First Cause of the universe (Adimúlam). The Lord, loth to tarry a second longer, rode upon His vehicle Garutman and appeared at the scene of trouble. sent He His Discus which cut in twain the head of the alligator; and the liberated elephant was no other than a great Gandharva or allegorically Jiva, liberated from the agonies of Samsåra. 
+by excessive thirst went to a pool of water to quench its thirst, when lo! an alligator caught hold of the foot of the elephant which, knowing of no other protector, appealed loudly to the Mercy of the First Cause of the universe (Adimúlam). The Lord, loth to tarry a second longer, rode upon His vehicle Garutman and appeared at the scene of trouble. sent He His Discus which cut in twain the head of the alligator; and the liberated elephant was no other than a great Gandharva or allegorically Jiva, liberated from the agonies of Samsāra. 
 cf. नक्राक्रान्ते करीन्द्रे. ग्राहग्रस्ते गजेन्द्रे, etc. 
 Fast 
 1. The delusion that body and soul are identical. 2. A sage had to perform a sacrifice for which a human being as the victim. 
@@ -929,7 +929,7 @@ rivers.
 ,,,, non-conscients are,, प्रकृति, कालं, शुद्धसत्वम् । 
 1. Four ends of life-धर्म, अर्थ, काम, मोक्ष81 
 Further :- 
-1.  Supreme is the spouse of Srî; most beneficial is Bhakti or Prapatti towards Him. His blessed Sankalpa sucketh up the Samsāra-sea. In no time can a person overcome the Nescience-fiend through the Noblest Mantra, the Ashtākshara', bequeathing the knowledge (therefor.) 
+1.  Supreme is the spouse of Srī; most beneficial is Bhakti or Prapatti towards Him. His blessed Sankalpa sucketh up the Samsāra-sea. In no time can a person overcome the Nescience-fiend through the Noblest Mantra, the Ashtākshara', bequeathing the knowledge (therefor.) 
 My love! That which cleareth the doubts of even dullards hath now been briefly stated. 
 3 
 1.  But in this Kali-age, some perverts, under the tight cloak of VedaVāda only seem to combat the apostates like Saugata, by insincere language like that passed between brothers-in-law. Pity! 
