--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/02.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/02.md
@@ -85,7 +85,7 @@ Fruition.
 मुहूर्तमपि जीवावो जलान्मत्स्याविवोधनौ ॥ (Ramayana.) 
 96 
 the wits of the Asuras etc. They are like darkness to be swept by the Sun. 
-These silly disputants, who indulge in diverse meaningless arguments-which differ not from the uproar of the great ocean churned by Madûsûdana's strong arms with the Mandara mount revolvingattempt to metamorphose even a Brihaspati1 into a Vanaspati.2 These Pervert-Elephants, eagerly raiding the plantain-grove -Path of Virtue, are surely fit to be overthrown by the most mighty Lion of Forceful Authority, which always hath a cautious beginning,-Lion which hath for its shining fangs, the founding of the Right Creed and the overthrow of the Wrong Creeds,-Lion, which hath for its claws sharp, the five kinds of Tarakas and which dwelleth in the forest of the Upanishads. 
+These silly disputants, who indulge in diverse meaningless arguments-which differ not from the uproar of the great ocean churned by Madūsūdana's strong arms with the Mandara mount revolvingattempt to metamorphose even a Brihaspati1 into a Vanaspati.2 These Pervert-Elephants, eagerly raiding the plantain-grove -Path of Virtue, are surely fit to be overthrown by the most mighty Lion of Forceful Authority, which always hath a cautious beginning,-Lion which hath for its shining fangs, the founding of the Right Creed and the overthrow of the Wrong Creeds,-Lion, which hath for its claws sharp, the five kinds of Tarakas and which dwelleth in the forest of the Upanishads. 
 1. The Preceptor of the Devas, 
 deity, 
 1. The five are--(1) 3 
@@ -322,7 +322,7 @@ Here haileth Yatindra-the hill-fount of the rivers of all knowledge,-Yatindra, t
 perverts, and the full-orbed Moon to the tides of the Vedic sea. 
 1 
 (Inside the curtain.) 
-1.  Schooled well in the systems of Tarka, Vyakarana2 and Mîmāmsā3, and our manliness paraded in systems counter also, we declare boldly in this assembly that we care not our contesting foes-from Sētu up to Himalaya-a yarn, straw or chaff. 
+1.  Schooled well in the systems of Tarka, Vyakarana2 and Mīmāmsā3, and our manliness paraded in systems counter also, we declare boldly in this assembly that we care not our contesting foes-from Sētu up to Himalaya-a yarn, straw or chaff. 
 Senapati.-Arya! Hearest thou the proud 
 challenge of the opponents ? 
 Pupil.-(With anger) Enough of insolence! 
@@ -335,7 +335,7 @@ Grammer.
 3. 
 118 
 burning with faiths adverse, I plant my left foot'. 
-Sri Desika does not mean literally what he states here. It is a mannerism he adapts such as Sahadeva's similar assertion when in the great Rajasûya sacrifice his discretion to do the first honor to Lord Krishna in preference to all great kings, sages and elders assembled was questioned by Sisupāla. Read Mahābbārata Sabhāparva 
+Sri Desika does not mean literally what he states here. It is a mannerism he adapts such as Sahadeva's similar assertion when in the great Rajasūya sacrifice his discretion to do the first honor to Lord Krishna in preference to all great kings, sages and elders assembled was questioned by Sisupāla. Read Mahābbārata Sabhāparva 
 thus :- 
 ८८ 
 Asked by Sisupāla thus:- 
@@ -361,7 +361,7 @@ the pride of rivals quelled by the vibrating waves of Hayagriva's' neigh, revell
 2. The horse-faced Avatara of Vishnu. 
 ←i ci 
 The allusion is to Nyaya-Tatva, (of Nathamuni) ---Siddhi-traya (of Yamuna), Sri-Bhashya (of Rāmānuja.) 
-1. Satadûshani, (of Desika) etc. 
+1. Satadūshani, (of Desika) etc. 
 2. By refuting materialists who impute wrong meanings to the Sruti by denying the Godhead &c. 
 3. The Parabrahman. 
 4. 
@@ -384,7 +384,7 @@ treasure.
 Pupil. I hope to come out victorious only by the strength of our siddhānta. Thy majesty shall anon witness it. 
 1.  The compositions of Yatirāja are immune from contradictions; lovely by reason of being distilled from Bodha yana's work, and blazing with faultless arguments; 
 2. The reputed author of Vritti-grantha on Brahma- 
-sûtras. 
+sūtras. 
 1. Sri Bhashya and other works. 
 2. 
 Vritti-grantha. 
@@ -507,7 +507,7 @@ Sire divine! By thy command, let me refute these Sānkhyas.
 2. Vishnu. 
 3. 
 प्रधानक्षेत्रपति 
-1. Chårvåkas and Nihilists who are still more 
+1. Chārvākas and Nihilists who are still more 
 Senapati. My lord! 
 134 
 1.  These Sankhyas, of their obstinacy bereft, by this Arya's arguments, now categorise' this Lord of the Cosmos (God) as the twenty-fifth, as the twentysixth, as the twenty-seventh. 
@@ -530,7 +530,7 @@ thy will.
 स्वाभाविकी ज्ञानबलकिया न । and such other Srutis 
 proclaiming the Godhead. 
 136 
-of "non-being" (or non-ens), and by controversions of the methods1 of the Veda, the notoriety obtained for the School of Kānāda, by an Ulûka2 setting up a teaching, hath now passed off into mere memory3. 
+of "non-being" (or non-ens), and by controversions of the methods1 of the Veda, the notoriety obtained for the School of Kānāda, by an Ulūka2 setting up a teaching, hath now passed off into mere memory3. 
 Guru.-(Eyeing with regards.) 
 Pupil.-(As if laughing):-But let (our) king 
 mind this, the yet more strange ! 
@@ -757,7 +757,7 @@ I shall combat these (Sānkarites) who delude people with ideas of fulfilled fru
 4. Kapila (Sage.) 
 Followers of Kānāda doctrine. 
 1. Yoga. 
-2. Pāşupata. 
+2. Pāṣupata. 
 3. 
 Also called Bhatta briefly. 
 1. 
@@ -892,7 +892,7 @@ forward thou shalt do:-
 2.   Coveting 
 166 
 no honor, fame or 
-wealth, gracious unto (thy) disciples, eager to learn, be engaged, as long as thy body lasteth, in the promulgation of the SārîrakaScience1, supported by sound logic. 
+wealth, gracious unto (thy) disciples, eager to learn, be engaged, as long as thy body lasteth, in the promulgation of the SārīrakaScience1, supported by sound logic. 
 Pupil.-Aye, as the holy sire directeth. 
 (Behind the curtain.) 
 Avaunt! 
