--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/03.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/03.md
@@ -16,7 +16,7 @@ Lust-Attachment to wordliness.
 169 
 1. Now that the heretics1 have been of overthrown through the manœuvre Vivēka, the way to Trivarga is the only outlet for Mahāmôha's energies. Beggarly Virakti3, I shall just decoy to a distance, and thou shalt entice Vishnu-bhakti all 
 at once. 
-Their disjunction with Jiva can be, by all means, effected, by casting the nets of making Svarga appear worthy and Moksha unworthy,-in all places. Expert as I am in a thousand and one deceits, I shall just beguile the beggarly Virakti, as Mārîcha 
+Their disjunction with Jiva can be, by all means, effected, by casting the nets of making Svarga appear worthy and Moksha unworthy,-in all places. Expert as I am in a thousand and one deceits, I shall just beguile the beggarly Virakti, as Mārīcha 
 Buddhists and others. 
 1. See n. 1. p. 115. 
 2. 
@@ -26,10 +26,10 @@ Dispassion or Renunciation.
 170 
 did Mithili' and thou shalt entice VishnuBhakti as Pôulastya' did. 
 Dvesha. Then what? 
-Raga. True, the Teachers of Vedanta Siddhānta hath routed the head-less Pûrvamimāmsakas, the foremost of the wishers of Mahāmôha's 
+Raga. True, the Teachers of Vedanta Siddhānta hath routed the head-less Pūrvamimāmsakas, the foremost of the wishers of Mahāmôha's 
 success-the very Purobits of demon Hiranya as it were re-incarnate on earth, yet I shall propound their very creed ingeniously and thus accomplish my 
 master's mission. 
-Dvesha. Rightly opportune is thy resolve to stand by the victorious banner of the arch-chiefs of Mahamôha promoting Atheism, viz., the creed of Nirisvara Mîmāmsa. 
+Dvesha. Rightly opportune is thy resolve to stand by the victorious banner of the arch-chiefs of Mahamôha promoting Atheism, viz., the creed of Nirisvara Mīmāmsa. 
 Raga. 2. If it becometh a passion to long 
 1. Another name of Sitā. 
 2. Rāvana. 
@@ -127,7 +127,7 @@ here.
 having now been dispelled. 
 Sumati.--(Sobbing.) My lord! Still troubled is my mind as to what shall happen. What shall I say? Do not Rāga and Dvēsha lie in ambush and, wait for an opportunity? 
 Viveka. Ah timid lady! Be not so weak in heart. Can Rāga and Dvēsha have room even in our presence ? 
-1.  Young dame! Enough of thy wailings, due to the recollection of rambles in unworthy paths! The Sārnga'-bowed Krishna, the Preacher of sublime Gîta to a fit disciple shall surely protect us, who seek His refuge. 
+1.  Young dame! Enough of thy wailings, due to the recollection of rambles in unworthy paths! The Sārnga'-bowed Krishna, the Preacher of sublime Gīta to a fit disciple shall surely protect us, who seek His refuge. 
 Sumati.-(With sorrow, using Samskrit). 
 1.  
 Aryaputra! Jiva, methinks, is much to be pitied, like a half-burnt live tree, in his state of grief, of inaction, of beastlike dependence, in the different stages of creation. annihilation, experience of 
@@ -204,7 +204,7 @@ It is but natural that a ripe fruit, which even an expert who hath climbed up th
 2. सुकूनपरिपाक. 
 188 
 Besides :- 
-1.  If Jiva himself longeth to attain Paramapada,' resorted to by Nityasûris, atoneth for all past sins, and abstaineth from committing further sins, and if the benevolent-natured Isvara fixeth His will on a goal, what could not all be Jiva's own? Sure as anything, he attaineth liberation ! 
+1.  If Jiva himself longeth to attain Paramapada,' resorted to by Nityasūris, atoneth for all past sins, and abstaineth from committing further sins, and if the benevolent-natured Isvara fixeth His will on a goal, what could not all be Jiva's own? Sure as anything, he attaineth liberation ! 
 Sumati. My lord! If Jiva doth thus cross the 
 1 
 Samsāric ocean, how then doth he (meanwhile endure agony, like a worm in the hollow between the two ends of a tree burning with wild fire, like an antelope surrounded by a pack of hounds, like a caravan of traders in a ship tossed by a stormy tempest, like a jackal blinking in a flood-begirt islet, like a house-holder in dread hard-breathing at the ingress of a huge cobra inside the house, like the trunk of a rootless tree battered by the waves of 
@@ -284,7 +284,7 @@ Devotion towards the Brabinan.
 1. See n. 2, p. 21. 
 196 
 Sumati. (Musing) Rightly so, if Anima', 
-Mahima, Garimā, Laghima', Vasitva"," Isîtva, Prāpti', Prākāmya, etc. ordained by dire Destiny to a person who is yet not quite exempt from all past sins and which are capable of being used for Môksha, do not therefore impede the means by which Môksha is reached. 
+Mahima, Garimā, Laghima', Vasitva"," Isītva, Prāpti', Prākāmya, etc. ordained by dire Destiny to a person who is yet not quite exempt from all past sins and which are capable of being used for Môksha, do not therefore impede the means by which Môksha is reached. 
 Viveka.-Queen! True. The ever-hostile obstacles to (God-) Yoga are indeed difficult to surmount. The attainment of Moksha will be unfettered only if these Yogaobstacles are prevented from appearing at all, instead of renouncing them after they actually occur. 
 (Then enter a messenger with palm leaf adorning his head). 
 1. Atomicness. 
