--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/04.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/04.md
@@ -293,7 +293,7 @@ Further:-
 My glory, proclaimed by sages great, such as Vālmíki, is a thing also not to be lightly passed over. 
 44 Was not even Sri Rama the victim of 
 234 
-my contempt through the influence of my weapon, Sri-Rama-the Lion of the Elephant-like Virādha", the exsiccators of the ocean, through the fire of his shaft, the conqueror of Khara, Dhûshana, and their hosts, the severer of the ten heads of Rāvana and the decimator of Kumbha- 
+my contempt through the influence of my weapon, Sri-Rama-the Lion of the Elephant-like Virādha", the exsiccators of the ocean, through the fire of his shaft, the conqueror of Khara, Dhūshana, and their hosts, the severer of the ten heads of Rāvana and the decimator of Kumbha- 
 karna? 
 Vasanta.-Kāma ! Well done. 
 Kama.--Friend! All praise is thine; for it is through thine influence, all this was done by me. 
@@ -445,7 +445,7 @@ Therefore, in this affair, we must first protect our lives. For, it is said that
 Kama.--Our Lôbha, who knoweth the ways of 
 the world, giveth us advice most apt. 
 247 
-1.  It is not meet that we, who wanted to adopt the policy of night-slaughter till now, should fall into the great abysmal pit of angry Viveka. Now shall Mahamoha himself strive to defeat our foe in action, himself leading Dambha' with his wife Kuhana and Garva3 with his wife Asûyā1 etc. 
+1.  It is not meet that we, who wanted to adopt the policy of night-slaughter till now, should fall into the great abysmal pit of angry Viveka. Now shall Mahamoha himself strive to defeat our foe in action, himself leading Dambha' with his wife Kuhana and Garva3 with his wife Asūyā1 etc. 
 Therefore we shall now disperse in different directions, for, they say that to save oneself he should forego the world. (Thus saying exeunt all). 
 Finis Act IV termed KāmādiVyuha-Bhēda (Dispersion of the Squadron of Kama etc.) 
 AUM. 
