--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/05.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/alt/05.md
@@ -115,9 +115,9 @@ the patient endurer of all commotions caused by the churning of the Mandara Moun
 1. Me, the world doth fancy, as the thirteenth1 Aditya, the twelfth' Rudra, and the ninth1 Vasu. 
 (Musing and laughing sardonically). 
 Strange is this world's folly! Those, whom even to think as equals to my servants is ridiculous, fondly fancy themselves to be my equals and betters! 
-1. In this world, men, whose minds shine with Vodic knowledge, the grammarians, those from all doubts in the Kalpa-sûtras free, again those toiled hard in the Vedāngas, and others well-versed in astronomy, others again who have mastered the verdict of Nirukti, and those strong in the three" 
+1. In this world, men, whose minds shine with Vodic knowledge, the grammarians, those from all doubts in the Kalpa-sūtras free, again those toiled hard in the Vedāngas, and others well-versed in astronomy, others again who have mastered the verdict of Nirukti, and those strong in the three" 
 2. As a matter of fact there exist only 12 Adityas, 
-11 Rudras and 8 Vasûs. 
+11 Rudras and 8 Vasūs. 
 1. Etymology. 3. Karma,, Devata and Brahma 
 Kandas. 
 259 
@@ -151,7 +151,7 @@ Alas !
 Thenceforth our renowned disciples move (unshackled) all over the world, leaving their enemies with their bare names and implanting their triumphant banners in all the Islands Seven. 
 1.  The monistic doctrine, I have given to some; to some others" I have given the dualistic doctrine, and yet to others I have 
 2. Banyan (i.e., after becoming a Jina.) 
-3. (1) Mabarashtra, (2) Magadha, (3) Saurasenî. 
+3. (1) Mabarashtra, (2) Magadha, (3) Saurasenī. 
 (4) Apabhramsa, (5) Paisacha, etc., 
 1. Depriving them of everything else. 
 2. The Illusionists. 
@@ -173,7 +173,7 @@ These countries, infested by barbarians, who are no better than goats, beasts an
 4 
 265 
 acting as ministers to foolish kings. 
-(Looking to the North). Yonder some one cometh, facing the South, either from Kasmira, or Jalandhara. I shall just ascertain from him how my wives fare? Ah! good Brahmana! "Knowest thou the present plight of my wives Irshà, and Asûyā, who have set out to go round the Mēru mountain, under the leading of Durmati ?" 
+(Looking to the North). Yonder some one cometh, facing the South, either from Kasmira, or Jalandhara. I shall just ascertain from him how my wives fare? Ah! good Brahmana! "Knowest thou the present plight of my wives Irshà, and Asūyā, who have set out to go round the Mēru mountain, under the leading of Durmati ?" 
 (Then listening). 
 "What! Savest thou that they are imprisoned in the depths of Nivritti Dharma, by Sumati's deceitful companions Maitri', Karuna, Mudità," and Upēkshā'" ? (With anger). Ah, this devil of a sinful Brahmana speaketh untruth. Ah thou mischievous bastard Srôtriga! Thou Brahma-Rakshasa! 
 How could this mishap befall my 
@@ -295,7 +295,7 @@ Prakriti.
 1. Absolved person. 
 277 
 indicateth that my meeting with my sweetheart is close at hand. 
-(Then enters Asûyē, disguised as an ascetic). Asuya. I am now commanded by Durmati, the queen of Mahāmôha, the foremost of Vivēka's foes, to corrupt the minds of the wise, so masquerading as would strike confidence into the minds of the whole universe. All the worlds ten and four I have wandered and after bathing in the holy waters of the Prayaga, I am just approaching the hermitage of this venerable ancestor named Dharinadhvaja. Clever espionage I should practise so as to make even good appear evil. 
+(Then enters Asūyē, disguised as an ascetic). Asuya. I am now commanded by Durmati, the queen of Mahāmôha, the foremost of Vivēka's foes, to corrupt the minds of the wise, so masquerading as would strike confidence into the minds of the whole universe. All the worlds ten and four I have wandered and after bathing in the holy waters of the Prayaga, I am just approaching the hermitage of this venerable ancestor named Dharinadhvaja. Clever espionage I should practise so as to make even good appear evil. 
 (Praising her own skill). 
 1.  Vigilant that I am. even Isvara, the extirpator of the sins of the universe, could not afford to remain exempt from blemish. 
 Unrestrainedly, the persons obsessed by me ever impuse faults even in cases where they exist not in the least. What to say 
@@ -450,7 +450,7 @@ Asuya. That is exactly the thought in my mind.
 Dambha. (Smiling). Your indentity also I 
 can determine by reasoning out. 
 293 
-1.  Surely thou art none other than Darpa, ever casting slander on good men and strong only in garrulity; and this, in ascetic guise, is no other than thy wife Asûyā.- 
+1.  Surely thou art none other than Darpa, ever casting slander on good men and strong only in garrulity; and this, in ascetic guise, is no other than thy wife Asūyā.- 
 (Behind the curtain). 
 Thou, master of the house, the most virtuous of the Gauda country and thou guest, the most virtuous of the Lāta country, surely but spake truth! 
 (All gaze at each other, discover their mutual identity and express delight). 
@@ -459,7 +459,7 @@ Darpa. Never did a heavenly voice prove untrue. I owe many apologies to thee, my
 Dambba. Indeed I too have offended thee. 
 (Dambha and Darpa lift their hands in salutation and speak affectionate words) 
 294 
-(Asûya and Kuhanà embrace each other tightly). 
+(Asūya and Kuhanà embrace each other tightly). 
 Dambha & Darpa.-As we wished, so have we met here, by chance. Now we should be with our king in time. 
 (Then enter Mahàmôha and Durmati). 
 Mabamoha.(Musing). My love! 
@@ -545,7 +545,7 @@ not in courage, even at the sight of damsels, who are shaped together with the c
 6 
 7 
 plantain-tree, the mirror, the quiver," and the lotus',-damsels who resemble the waving pennons, implanted in the front of Cupid's hosts ? 
-Ha! Ha!! Quoth not the Vedasthat many are the wives of Garuda, brooking not a moment's separation from him, as also of the other eternal lovers of Vaikuntha who are ever free from family-ties? Quoth not again the Srutis that the Supreme Lord who liberateth men from all samsara is the spouse of no less than three wives, Sri, Bhû and Nilā? Therefore the monkeylike revilers of Kāma-the true aim of life, 
+Ha! Ha!! Quoth not the Vedasthat many are the wives of Garuda, brooking not a moment's separation from him, as also of the other eternal lovers of Vaikuntha who are ever free from family-ties? Quoth not again the Srutis that the Supreme Lord who liberateth men from all samsara is the spouse of no less than three wives, Sri, Bhū and Nilā? Therefore the monkeylike revilers of Kāma-the true aim of life, 
 1. Hair. 
 2. Face. 
 3. Thighs. 
